--- a/Web/Responsive/index.html
+++ b/Web/Responsive/index.html
@@ -313,7 +313,7 @@
                         </video> -->
                         <div class="video">
                             <iframe width="560" height="315"
-                                src="https://www.youtube.com/embed/ScY3FT-sdjE?si=lfV9U_EimSynMRJQ"
+                                src="https://www.youtube.com/embed/ScY3FT-sdjE?si=jHi72mrbhMUBxqOI"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -327,7 +327,7 @@
                     <h3 class="ir_su">반응형 사이트 오른쪽 컨텐츠</h3>
                     <article class="column col7">
                         <h4 class="col_tit">Effect1</h4>
-                        <p class="col_desc">CSS의 transform을 이용한 마우스 오버효과입니다.</p>
+                        <p class="col_desc">CSS의 transform을 이용한 마우스 오버효과 입니다.</p>
                         <!-- side1 -->
                         <div class="side1">
                             <figure>
@@ -342,23 +342,36 @@
                     <!-- //col7 -->
                     <article class="column col8">
                         <h4 class="col_tit">Effect2</h4>
-                        <p class="col_desc">CSS의 transform을 이용한 마우스 오버효과입니다.</p>
+                        <p class="col_desc">CSS의 transform을 이용한 마우스 오버효과 입니다.</p>
                         <!-- side2 -->
                         <div class="side2">
-                            <figure>
-                                <img src="img/side2.jpg" alt="이미지1">
+                            <figure class="front">
+                                <img src="img/side4.jpg" alt="이미지4">
+                                <figcaption>
+                                    Hover Effect
+                                </figcaption>
                             </figure>
+                            <figure class="back">
+                                <img src="img/side2.jpg" alt="이미지2">
+                                <figcaption>
+                                    Hover Effect
+                                </figcaption>
+                            </figure>
+
                         </div>
                         <!-- //side2-->
                     </article>
                     <!-- //col8 -->
                     <article class="column col9">
                         <h4 class="col_tit">Effect3</h4>
-                        <p class="col_desc">CSS의 transform을 이용한 마우스 오버효과입니다.</p>
+                        <p class="col_desc">CSS의 transform을 이용한 마우스 오버효과 입니다.</p>
                         <!-- side3 -->
                         <div class="side3">
                             <figure>
-                                <img src="img/side3.jpg" alt="이미지1">
+                                <img src="img/side3.jpg" alt="이미지3">
+                                <figcaption>
+                                    <h3>Hover<em>Effect</em></h3>
+                                </figcaption>
                             </figure>
                         </div>
                         <!-- //side3-->
